--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test-build": "node dist/index.js",
     "test": "ts-node src/index.ts",
-    "dev": "ts-node-dev src/index.ts",
+    "dev": "ts-node-dev src/index-local.ts",
     "build": "tsc -p ."
   },
   "author": "",
@@ -22,7 +22,8 @@
     "joi": "^17.9.2",
     "jsonwebtoken": "^9.0.1",
     "mongodb": "^5.7.0",
-    "mongoose": "^7.4.3"
+    "mongoose": "^7.4.3",
+    "serverless-http": "^3.2.0"
   },
   "devDependencies": {
     "@types/aws-sdk": "^2.7.0",
@@ -33,8 +34,10 @@
     "@types/node": "^18.7.6",
     "@types/sharp": "^0.30.5",
     "nodemon": "^2.0.19",
+    "serverless-offline": "^12.0.4",
+    "serverless-plugin-typescript": "^2.1.5",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^4.7.4"
+    "typescript": "^4.9.5"
   }
 }
