--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "jsonwebtoken": "^9.0.1",
     "mongodb": "^5.7.0",
     "mongoose": "^7.4.3",
+    "newsapi": "^2.4.1",
+    "openai": "^4.10.0",
     "serverless-http": "^3.2.0"
   },
   "devDependencies": {
