--- a/Caddyfile
+++ b/Caddyfile
@@ -1,5 +1,6 @@
 localhost {
-reverse_proxy localhost:8080 # Adjust to your Node.js app's port
-encode gzip
-file_server
+        bind 0.0.0.0
+        reverse_proxy localhost:8080
+        encode gzip
+        file_server
 }
