--- a/Caddyfile
+++ b/Caddyfile
@@ -1,10 +1,3 @@
-{
-        admin 0.0.0.0:2020
-}
-
-localhost {
-        bind 0.0.0.0
-        reverse_proxy localhost:8080
-        encode gzip
-        file_server
+api.sayantanmishra.com {
+	reverse_proxy :8080
 }
