--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,6 @@
 name: Sample Workflow
 
-on: commit
+on: push
 
 jobs:
   build:
@@ -10,4 +10,4 @@ jobs:
     - uses: actions/checkout@v3
 
     - name: Run a sample github action
-    - run: echo "This workflow ran successfully"
+      run: echo "This workflow ran successfully"
