dev dep add for swagger and yaml

--- a/package.json
+++ b/package.json
@@ -37,8 +37,11 @@
     "@types/cors": "^2.8.13",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.13",
+    "@types/js-yaml": "^4.0.9",
     "@types/node": "^18.7.6",
     "@types/sharp": "^0.30.5",
+    "@types/swagger-ui-express": "^4.1.6",
+    "@types/yamljs": "^0.2.34",
     "nodemon": "^2.0.19",
     "serverless-offline": "^12.0.4",
     "serverless-plugin-typescript": "^2.1.5",
