--- a/package.json
+++ b/package.json
@@ -13,23 +13,30 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@aws-sdk/client-ses": "^3.830.0",
+    "@aws-sdk/client-sns": "^3.830.0",
+    "@types/cheerio": "^1.0.0",
     "@types/jsonwebtoken": "^9.0.2",
+    "@types/lodash": "^4.17.18",
     "@types/mongodb": "^4.0.7",
     "@types/mongoose": "^5.11.97",
+    "axios": "^1.10.0",
     "bcryptjs": "^2.4.3",
+    "cheerio": "^1.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.1",
+    "heapdump": "^0.3.15",
     "joi": "^17.9.2",
     "js-yaml": "^4.1.0",
     "jsonwebtoken": "^9.0.1",
+    "lodash": "^4.17.21",
     "mongodb": "^5.7.0",
-    "mongoose": "^7.4.3",
+    "mongoose": "^7.8.2",
     "newsapi": "^2.4.1",
+    "node-cron": "^3.0.3",
     "openai": "^4.10.0",
-    "serverless-http": "^3.2.0",
-    "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^5.0.0"
+    "serverless-http": "^3.2.0"
   },
   "devDependencies": {
     "@types/aws-sdk": "^2.7.0",
@@ -40,7 +47,6 @@
     "@types/js-yaml": "^4.0.9",
     "@types/node": "^18.7.6",
     "@types/sharp": "^0.30.5",
-    "@types/swagger-ui-express": "^4.1.6",
     "@types/yamljs": "^0.2.34",
     "nodemon": "^3.1.0",
     "serverless-offline": "^12.0.4",
