--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,17 +1,13 @@
 {
-    "compilerOptions": {
-        "module": "commonjs",
-        "esModuleInterop": true,
-        "target": "es6",
-        "moduleResolution": "node",
-        "sourceMap": true,
-        "outDir": "dist",
-        "typeRoots": [
-            "./src/types",
-            "./node_modules/@types"
-        ],
-    },
-    "lib": [
-        "es2015"
-    ]
+  "compilerOptions": {
+    "module": "commonjs",
+    "esModuleInterop": true,
+    "target": "es6",
+    "moduleResolution": "node",
+    "sourceMap": true,
+    "outDir": "dist",
+    "typeRoots": ["./src/types", "./node_modules/@types"],
+    "skipLibCheck": true
+  },
+  "lib": ["es2015"]
 }
